assets/css/app.sass
@charset "UTF-8"
@import "normalize", "variables", "foundation/components/global", "foundation/components/type", "foundation/components/grid", "foundation/components/block-grid", "foundation/components/visibility", "foundation/components/top-bar", "foundation/components/buttons", "animate"

=experimental($property, $values...)
  -webkit-#{$property} : $values
  -moz-#{$property} : $values
  -ms-#{$property} : $values
  -o-#{$property} : $values
  #{$property} : $values

=animate($name: fadeIn, $duration: 1s, $delay: 0s, $function: ease, $mode: both)
  +experimental(animation, $name $duration $delay $function $mode)

@media only screen and (max-width:#{$medium-screen})
  body
    font-size: 125%

@media only screen and (max-width:#{$small-screen})
  body
    font-size: 112.5%

=override-colors($main-fg, $main-bg, $alt-fg)
  color: $main-fg
  background: $main-bg url(../img/white-bg.png)

  h1, h2, h3, h4, h5, h6, .subheader, p, blockquote, small
    color: $main-fg

  a
    color: $alt-fg
    &:hover, &:active
      color: mix($alt-fg, $main-bg, 70%)

  code, abbr, acronym
    color: darken($main-fg, 15%)

//
// SECTION STYLES
//
.feature
  padding: 1em 0 2em 0
  position: relative
  overflow: hidden
  clear: both

  .row
    margin-bottom: 1em
    max-width: 1000px
    text-align: center

#header
  padding: 0
  background: $topbar-bg

  .fixed
    opacity: .75

    @media only screen and (max-width:#{$small-screen})
      display: none

    .name h1 a
      width: auto

      span
        font-weight: normal
        display: inline-block
        color: $blue

//
// INTRO SECTION
//
#intro
  $main-fg: $dark
  $main-bg: $white
  $alt-fg: $blue
  +override-colors($main-fg,$main-bg,$alt-fg)
  border-radius: 0

  @media #{$small}
    margin-top: $topbar-height

  .logo
    .tw-logo
      display: block
      &:hover
        +animate(bounce, 1s)
      img
        display: inline-block
        margin: 0 auto
        height: 2em
        +animate(bounceInLeft, 1s, 0s)

    h1
      +animate(bounceInRight, 1s, 0s)

    h6
      +animate(flipInX, 1s, .5s)

    .subheader
      $subheader-color: darken($alt-fg, 0%)
      color: $subheader-color
      margin: 1em 0 0 0
      +animate(flipInX, 1s, .5s)

    .subnote
      line-height: 1.5
      display: block
      font-size: .6em
      +animate(flipInX, 1s, .5s)

  .countdown
    h4
      color: $alt-fg

    .date
      p
        +animate(fadeInDown, 1s, 1s)

      h4
        +animate(fadeInUp, 1s, 1s)
        border-top: 1px dashed $main-fg

    .counter
      p
        +animate(fadeInUp, 1s, 1s)

      h4
        +animate(fadeInDown, 1s, 1s)
        border-bottom: 1px dashed $main-fg

        &#seconds
          overflow: hidden
          position: relative

          span
            display: block
            position: absolute
            width: 100%
            height: 100%
            +single-transition(top)

          =tickerOrder($current, $previous, $next)
            &.#{$current}
              ##{$current}
                visibility: visible
                top: 0
              ##{$previous}
                top: -100%
              ##{$next}
                visibility: hidden
                top: 100%

          +tickerOrder("tick", "tock", "tack")
          +tickerOrder("tock", "tack", "tick")
          +tickerOrder("tack", "tick", "tock")

  .actions
    padding-top: 1em

    .participate
      +animate(rotateInUpLeft, 1s, 1.5s)

    .talk
      +animate(rotateInUpRight, 1s, 1.5s)

    .participate-or-talk
      +animate(fadeInUp, 1s, 2s)

    a
      display: block

      &:hover
        +animate(tada)

      h4
        +single-transition(background-color)
        +button-style($alt-fg)
        +radius
        color: $main-bg
        padding: .25em
        margin-bottom: .25em

      @media only screen and (max-width:#{$small-screen})
        padding: .5em

    h6.delimiter
      color: lighten($main-fg, 50%)
      line-height: 2.5

//
// AGENDA SECTION
//
#agenda
  $main-fg: $dark
  $main-bg: $blue
  $alt-fg: $white
  +override-colors($main-fg,$main-bg,$alt-fg)

  .timings
    .row
      border-bottom: 1px dashed lighten($main-bg, 30%)
      margin-bottom: 0
      padding: .5em 0
      overflow: hidden
      +single-transition(background-color)

      &:last-child
        border-bottom: 0

      .time,
      .summary
        +experimental(transform-origin, 50% 50%)

      .summary
        position: relative

        p
          margin-bottom: 0
        small
          line-height: 1rem
          display: inline-block
        img
          display: block
          margin: $paragraph-margin-bottom auto
          max-width: 3em
          border-radius: 50%

      @media #{$small}
        p
          margin-bottom: 0

        .time
          +experimental(transform-origin, 100% 50%)
          text-align: right
          p:after
            display: block
            content: '\00A7'
            position: absolute
            top: 0
            right: -.25em

        .summary
          +experimental(transform-origin, 0% 50%)
          text-align: left
          p
            padding-right: 3.15em
          img
            position: absolute
            right: 1em
            top: 50%
            margin-top: -1.5em

      &:hover
        background-color: lighten($main-bg, 10%)

//
// LOCATION SECTION
//
#location
  $main-fg: $white
  $main-bg: $dark
  +override-colors($main-fg,$main-bg,$main-fg)
  background-image: url(../img/dark-bg.jpg)

  .row
    overflow: hidden

  .address
    span
      display: block
      padding-bottom: .5em
    a
      color: $blue

  @media #{$small}
    .address p
      text-align: right
    img
      border-radius: 0 .5em .5em 0

//
// ABOUT SECTION
//
#about
  $main-fg: $white
  $main-bg: $dark
  $alt-fg: $blue
  +override-colors($main-fg,$main-bg,$alt-fg)
  background-image: url(../img/dark-bg.jpg)

  .social
    a
      font-size: 1.5em
      display: inline-block
      color: $main-bg
      background-color: $main-fg
      border-radius: 50%
      width: 1.5em
      height: 1.5em
      line-height: 1.5em
      margin: 0 .1em
      position: relative
      +experimental(transition, color .3s, background-color .3s)

      i
        display: inline-block

      &:before
        display: block
        position: absolute
        content: ''
        width: 2px
        margin-left: -1px
        height: 2.5em
        background-color: $main-fg
        top: -2.5em
        left: 50%

      &:hover, &:focus
        color: $main-fg
        background-color: $alt-fg
        i
          +animate(flip)

  blockquote
    border: 0
    padding: 0
    margin: 0

    p
      text-align: left
      font-size: 1em
      margin-bottom: 1em

    small
      font-size: $blockquote-cite-font-size

    cite
      margin: .25em 0
      text-align: right

//
// ARCHIVE AREA
//
#archive
  $main-fg: $dark
  $main-bg: $white
  $alt-fg: $blue
  +override-colors($main-fg,$main-bg,$alt-fg)

  .grid a
    display: block
    overflow: hidden
    padding: .25em
    background-color: darken($main-bg, 30%)
    border-radius: .5em
    +experimental(transition, background-color .3s)

    &:hover
      background-color: $alt-fg

    .month
      @extend h6
      color: $main-bg
      line-height: 1.5em
      margin: 0

      &:before,
      &:after
        content: '\2022'
        display: inline-block
      &:before
        float: left
      &:after
        float: right

    .day
      @extend h3
      background-color: $main-bg
      margin: 0
      line-height: 1.5em

    .year
      @extend small
      background-color: $main-bg
      border-top: 1px dashed darken($main-bg, 30%)
      line-height: 2em
      border-radius: 0 0 .25em .25em

//
// FOOTER
//
#footer
  $main-fg: darken($topbar-bg-color, 30%)
  $main-bg: $topbar-bg-color
  $alt-fg: lighten($blue, 15%)
  +override-colors($main-fg,$main-bg,$alt-fg)

  border-radius: 0
  margin-top: 0
  padding: .5em 0

  .row
    margin-bottom: 0
    p
      line-height: 1em
      a
        color: $alt-fg

